# race_data

project_1/: Git.md  README.md  pyproject.toml
project_1/database/1997/: 1997.json  1997_1.json  1997_10.json  1997_11.json  1997_12.json  1997_13.json  1997_14.json  1997_15.json  1997_16.json  1997_17.json  1997_2.json  1997_3.json  1997_4.json  1997_5.json  1997_6.json  1997_7.json  1997_8.json  1997_9.json  circuits_1997.json  constructors_1997.json  drivers_1997.json
project_1/database/1998/: 1998.json  1998_1.json  1998_10.json  1998_11.json  1998_12.json  1998_13.json  1998_14.json  1998_15.json  1998_16.json  1998_2.json  1998_3.json  1998_4.json  1998_5.json  1998_6.json  1998_7.json  1998_8.json  1998_9.json  circuits_1998.json  constructors_1998.json  drivers_1998.json
project_1/database/1999/: 1999.json  1999_1.json  1999_10.json  1999_11.json  1999_12.json  1999_13.json  1999_14.json  1999_15.json  1999_16.json  1999_2.json  1999_3.json  1999_4.json  1999_5.json  1999_6.json  1999_7.json  1999_8.json  1999_9.json  circuits_1999.json  constructors_1999.json  drivers_1999.json
project_1/database/2000/: 2000.json  2000_1.json  2000_10.json  2000_11.json  2000_12.json  2000_13.json  2000_14.json  2000_15.json  2000_16.json  2000_17.json  2000_2.json  2000_3.json  2000_4.json  2000_5.json  2000_6.json  2000_7.json  2000_8.json  2000_9.json  circuits_2000.json  constructors_2000.json  drivers_2000.json
project_1/database/2001/: 2001.json  2001_1.json  2001_10.json  (+18 more)
project_1/project_1/: graph.py  main.py
project_1/tests/: conftest.py  test_main.py
(+517 files in other folders)
